Final z-index fix...

--- a/src/client/sass/common.scss
+++ b/src/client/sass/common.scss
@@ -329,7 +329,7 @@ nav {
   }
 
   button {
-    z-index: 2;
+    z-index: 101;
   }
 }
 
